src/testing-helpers/__tests__/__snapshots__/bun-test-runner.test.ts.snap
// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`bun-test-runner same-file--one-failing-with-unhandled-error 1`] = `
"src/__tests__/cli.test.ts:
517 |     expect(loggerMocks.error).toHaveBeenCalledTimes(2);
518 |     expect(loggerMocks.error).toHaveBeenNthCalledWith(1, 'Error during tool installation: %s', 'undefined is not an object (evaluating \\'result.success\\')');
519 |     expect(loggerMocks.error).toHaveBeenNthCalledWith(2, 'Critical error in install command: %s', 'TEST_EXIT_CLI_CALLED_WITH_1');
520 | 
521 |     // console.error in main()'s catch block should have been called
522 |     expect(consoleErrorSpy).toHaveBeenCalledWith('Error during main CLI execution:', new Error('TEST_EXIT_CLI_CALLED_WITH_1'));
                                  ^
error: expect(received).toHaveBeenCalledWith(expected)

Number of calls: 0

      at <anonymous> (/Users/user/.dotfiles/generator/src/__tests__/cli.test.ts:522:29)
(fail) CLI > main function should trigger process.exit when setupServices in action handler fails [1.18ms]
# Unhandled error between tests
-------------------------------
471 |     // It verifies that the error propagates correctly, clientLogger.error is called, and the CLI exits.
472 | 
473 |     setupServicesSpy.mockClear(); // Clear any calls from beforeEach's registerAllCommands
474 |     mockInstall.mockClear();      // Clear the general mockInstall, not directly used but good practice
475 | 
476 |     const specificTestError = new Error('SetupServices in install action failed for this specific test!');
                                    ^
error: SetupServices in install action failed for this specific test!
      at <anonymous> (/Users/user/.dotfiles/generator/src/__tests__/cli.test.ts:476:31)
      at <anonymous> (/Users/user/.dotfiles/generator/src/__tests__/cli.test.ts:469:96)
-------------------------------


# Unhandled error between tests
-------------------------------
517 |     expect(loggerMocks.error).toHaveBeenCalledTimes(2);
518 |     expect(loggerMocks.error).toHaveBeenNthCalledWith(1, 'Error during tool installation: %s', 'undefined is not an object (evaluating \\'result.success\\')');
519 |     expect(loggerMocks.error).toHaveBeenNthCalledWith(2, 'Critical error in install command: %s', 'TEST_EXIT_CLI_CALLED_WITH_1');
520 | 
521 |     // console.error in main()'s catch block should have been called
522 |     expect(consoleErrorSpy).toHaveBeenCalledWith('Error during main CLI execution:', new Error('TEST_EXIT_CLI_CALLED_WITH_1'));
                                  ^
error: expect(received).toHaveBeenCalledWith(expected)

Number of calls: 0

      at <anonymous> (/Users/user/.dotfiles/generator/src/__tests__/cli.test.ts:522:29)
-------------------------------

(pass) CLI > install command should call installer.install with correct parameters [0.14ms]
(pass) CLI > install command should handle tool not found error [0.16ms]
(pass) CLI > install command should handle installation failure [0.15ms]
(pass) CLI > install command should pass force and verbose options to installer, and handle quiet [0.43ms]
(pass) CLI > install command with --verbose should show otherChanges via logger.debug [0.22ms]
(pass) CLI > install command without --verbose should not show otherChanges via logger.debug [0.11ms]
(pass) CLI > install command with --verbose should not show "Detailed installation steps:" header if otherChanges is empty [0.20ms]

-------------------------------------------------------------------------------|---------|---------|-------------------
File                                                                           | % Funcs | % Lines | Uncovered Line #s
-------------------------------------------------------------------------------|---------|---------|-------------------
 src/__tests__/helpers.ts                                                      |  100.00 |   93.48 | 115-116
 src/cli.ts                                                                    |   87.50 |   70.71 | 112-115,117-136,139-145,147-152,155,259-260
 src/modules/cli/checkUpdatesCommand.ts                                        |  100.00 |   95.33 | 121-122,143-145
 src/modules/cli/cleanupCommand.ts                                             |   71.43 |   79.87 | 186-195,208-227
 src/modules/cli/detectConflictsCommand.ts                                     |   80.00 |   80.73 | 158-178
 src/modules/cli/generateCommand.ts                                            |   62.50 |   75.89 | 100-108,110,114-115,119-122,130-139
 src/modules/cli/updateCommand.ts                                              |  100.00 |   94.02 | 119-120,194-196,198-199
 src/modules/config-loader/loadToolConfigs.ts                                  |    0.00 |    3.27 | 16-105,116-173
 src/modules/config-loader/toolConfigLoader.ts                                 |  100.00 |   97.83 | 134-135
 src/modules/config/toolConfigSchema.ts                                        |    0.00 |   82.49 | 181-188,250-272
 src/modules/file-system/MemFileSystem.ts                                      |   96.88 |   91.67 | 135-140
 src/modules/file-system/NodeFileSystem.ts                                     |   93.33 |   91.49 | 49-52
 src/modules/generator-shim/ShimGenerator.ts                                   |   83.33 |   68.31 | 174-218
 src/modules/tool-config-builder/toolConfigBuilder.ts                          |   90.91 |   98.58 | 147-148
 src/testing-helpers/bun-preload.ts                                            |  100.00 |   66.67 | 6-8
 src/testing-helpers/createMockFileSystem.ts                                   |   68.18 |   39.58 | 108-194
 src/types/platform.types.ts                                                   |   50.00 |   53.57 | 50-54,64-71
-------------------------------------------------------------------------------|---------|---------|-------------------
 453 pass
 1 fail
 2 errors
 1304 expect() calls
Ran 454 tests across 36 files. [1.89s]
"
`;
